# FizzBuzzHaskellPropertyBased

./: FizzBuzzHaskellPropertyBased.cabal  README.md  package.yaml  stack.yaml
src/: FizzBuzz.hs
test/: Spec.hs
