name:                FizzBuzzHaskellPropertyBased
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ploeh/FizzBuzzHaskellPropertyBased
license:             GPL-3.0-or-later
license-file:        COPYING
author:              Mark Seemann
copyright:           2021 Mark Seemann
category:            Example
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/FizzBuzzHaskellPropertyBased
